--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-<!-- https://fonts.google.com/specimen/Zen+Old+Mincho -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Zen+Antique&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
+	<!-- https://fonts.google.com/specimen/Zen+Old+Mincho -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Zen+Antique&family=Zen+Old+Mincho&display=swap"
+		rel="stylesheet">
 
-<!-- https://fonts.google.com/specimen/Protest+Revolution?preview.size=71 -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Protest+Revolution&family=Zen+Antique&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
+	<!-- https://fonts.google.com/specimen/Protest+Revolution?preview.size=71 -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Protest+Revolution&family=Zen+Antique&family=Zen+Old+Mincho&display=swap"
+		rel="stylesheet">
 
 </head>
 
@@ -33,31 +37,31 @@
 
 			<div class="english_line1">
 
-			<h3>They think that we're no one </h3>
+				<h3 class="animate cloud">They think that we're no one </h3>
 
 			</div>
 
 			<div class="english_line2">
 
-			<h3>We're nothing, not sorry </h3>
+				<h3 class="animate cloud1">We're nothing, not sorry </h3>
 
 			</div>
 
 			<div class="english_line3">
 
-			<h3>They push us</h3>
+				<h3 class="animate cloud2">They push us</h3>
 
 			</div>
 
 			<div class="english_line4">
 
-			<h3>It's too late, it's too late </h3>
+				<h3 class="animate cloud3">It's too late, it's too late </h3>
 
 			</div>
 
 			<div class="english_line5">
 
-			<h3>Not going back</h3>
+				<h3 class="animate cloud4">Not going back</h3>
 
 			</div>
 
@@ -69,81 +73,80 @@
 
 			<div class="japanese_line1">
 
-			<h3>夢</h3>
-			<h3>は</h3>
-			<h3>終</h3>
-			<h3>わ</h3>
-			<h3>り</h3>
-			<h3> </h3>
-			<h3>目</h3>
-			<h3>を</h3>
-			<h3>覚</h3>
-			<h3>ま</h3>
-			<h3>す</h3>
-			<h3>時</h3>
+				<h3 class="animate droplets">夢</h3>
+				<h3 class="animate droplets1">は</h3>
+				<h3 class="animate droplets2">終</h3>
+				<h3 class="animate droplets3">わ</h3>
+				<h3 class="animate droplets4">り</h3>
+				<h3 class="animate droplets5">目</h3>
+				<h3 class="animate droplets6">を</h3>
+				<h3 class="animate droplets7">覚</h3>
+				<h3 class="animate droplets8">ま</h3>
+				<h3 class="animate droplets9">す</h3>
+				<h3 class="animate droplets10">時</h3>
 
 			</div>
 
 			<div class="japanese_line2">
 
-			<h3>絶</h3>
-			<h3>望</h3>
-			<h3>や</h3>			
-			<h3>希</h3>
-			<h3>望</h3>
-			<h3>も</h3>
-			<h3>同</h3>
-			<h3>時</h3>
-			<h3>に</h3>
-			<h3>目</h3>
-			<h3>を</h3>
-			<h3>覚</h3>
-			<h3>ま</h3>
-			<h3>し</h3>
-			<h3>た</h3>
+				<h3 class="animate droplets">絶</h3>
+				<h3 class="animate droplets1">望</h3>
+				<h3 class="animate droplets2">や</h3>
+				<h3 class="animate droplets3">希</h3>
+				<h3 class="animate droplets4">望</h3>
+				<h3 class="animate droplets5">も</h3>
+				<h3 class="animate droplets6">同</h3>
+				<h3 class="animate droplets7">時</h3>
+				<h3 class="animate droplets8">に</h3>
+				<h3 class="animate droplets9">目</h3>
+				<h3 class="animate droplets10">を</h3>
+				<h3 class="animate droplets11">覚</h3>
+				<h3 class="animate droplets12">ま</h3>
+				<h3 class="animate droplets13">し</h3>
+				<h3 class="animate droplets14">た</h3>
 
 			</div>
 
 			<div class="japanese_line3">
 
-			<h3>鏡</h3>
-			<h3>に</h3>
-			<h3>映</h3>			
-			<h3>っ</h3>
-			<h3>た</h3>
-			<h3> </h3>
-			<h3>僕</h3>
-			<h3>が</h3>
-			<h3>問</h3>
-			<h3>い</h3>
-			<h3>か</h3>
-			<h3>け</h3>
-			<h3>る</h3>
+				<h3 class="animate droplets">鏡</h3>
+				<h3 class="animate droplets1">に</h3>
+				<h3 class="animate droplets2">映</h3>
+				<h3 class="animate droplets3">っ</h3>
+				<h3 class="animate droplets4">た</h3>
+				<h3 class="animate droplets5"> </h3>
+				<h3 class="animate droplets6">僕</h3>
+				<h3 class="animate droplets7">が</h3>
+				<h3 class="animate droplets8">問</h3>
+				<h3 class="animate droplets9">い</h3>
+				<h3 class="animate droplets10">か</h3>
+				<h3 class="animate droplets11">け</h3>
+				<h3 class="animate droplets12">る</h3>
 
 			</div>
 
 			<div class="japanese_line4">
 
-			<h3>自</h3>
-			<h3>分</h3>
-			<h3>を</h3>			
-			<h3>誤</h3>
-			<h3>魔</h3>
-			<h3>化</h3>
-			<h3>し</h3>
-			<h3> </h3>
-			<h3>生</h3>
-			<h3>き</h3>
-			<h3>る</h3>
-			<h3>こ</h3>
-			<h3>と</h3>
-			<h3>に</h3>
-			<h3>意</h3>
-			<h3>味</h3>
-			<h3>は</h3>
-			<h3>あ</h3>
-			<h3>る</h3>
-			<h3>か</h3>
+				<h3 class="animate droplets">自</h3>
+				<h3 class="animate droplets1">分</h3>
+				<h3 class="animate droplets2">を</h3>
+				<h3 class="animate droplets3">誤</h3>
+				<h3 class="animate droplets4">魔</h3>
+				<h3 class="animate droplets5">化</h3>
+				<h3 class="animate droplets6">し</h3>
+				<h3 class="animate droplets7"> </h3>
+				<h3 class="animate droplets8">生</h3>
+				<h3 class="animate droplets9">き</h3>
+				<h3 class="animate droplets10">る</h3>
+				<h3 class="animate droplets11">こ</h3>
+				<h3 class="animate droplets12">と</h3>
+				<h3 class="animate droplets13">に</h3>
+				<h3 class="animate droplets14">意</h3>
+				<h3 class="animate droplets15">味</h3>
+				<h3 class="animate droplets16">は</h3>
+				<h3 class="animate droplets17">あ</h3>
+				<h3 class="animate droplets18">る</h3>
+				<h3 class="animate droplets19">か</h3>
 
 			</div>
 
@@ -155,49 +158,49 @@
 
 			<div class="english_line1">
 
-			<h3>When you're standing on the edge </h3>
+				<h3 class="animate cloud">When you're standing on the edge </h3>
 
 			</div>
 
 			<div class="english_line2">
 
-			<h3>So young and hopeless </h3>
+				<h3 class="animate cloud1">So young and hopeless </h3>
 
 			</div>
 
 			<div class="english_line3">
 
-			<h3>Got demons in your head </h3>
+				<h3 class="animate cloud2">Got demons in your head </h3>
 
 			</div>
 
 			<div class="english_line4">
 
-			<h3>We are, we are</h3>
+				<h3 class="animate cloud3">We are, we are</h3>
 
 			</div>
 
 			<div class="english_line5">
 
-			<h3>No ground beneath your feet </h3>
+				<h3 class="animate cloud4">No ground beneath your feet </h3>
 
 			</div>
 
 			<div class="english_line6">
 
-			<h3>Nowhere to hold you </h3>
+				<h3 class="animate cloud5">Nowhere to hold you </h3>
 
 			</div>
 
 			<div class="english_line7">
 
-			<h3>'Cause we are, we are </h3>
+				<h3 class="animate cloud6">'Cause we are, we are </h3>
 
 			</div>
 
 			<div class="english_line8">
 
-			<h3>The colors in the dark </h3>
+				<h3 class="animate cloud7">The colors in the dark </h3>
 
 			</div>
 
@@ -210,38 +213,38 @@
 
 			<div class="japanese_line1">
 
-			<h3>酷</h3>
-			<h3>く</h3>
-			<h3>痛</h3>
-			<h3>む</h3>
-			<h3> </h3>
-			<h3>鼓</h3>
-			<h3>動</h3>
-			<h3>は</h3>
-			<h3>早</h3>
-			<h3>く</h3>
+				<h3 class="animate droplets">酷</h3>
+				<h3 class="animate droplets1">く</h3>
+				<h3 class="animate droplets2">痛</h3>
+				<h3 class="animate droplets3">む</h3>
+				<h3 class="animate droplets4"> </h3>
+				<h3 class="animate droplets5">鼓</h3>
+				<h3 class="animate droplets6">動</h3>
+				<h3 class="animate droplets7">は</h3>
+				<h3 class="animate droplets8">早</h3>
+				<h3 class="animate droplets9">く</h3>
 
 			</div>
 
 			<div class="japanese_line2">
 
-			<h3>遠</h3>
-			<h3>の</h3>
-			<h3>く</h3>
-			<h3>景</h3>
-			<h3>色</h3>
-			<h3>を</h3>
-			<h3> </h3>
-			<h3>こ</h3>
-			<h3>の</h3>
-			<h3>手</h3>
-			<h3>で</h3>
-			<h3>掴</h3>
-			<h3>も</h3>
-			<h3>う</h3>
-			<h3>と</h3>
-			<h3>し</h3>
-			<h3>た</h3>
+				<h3 class="animate droplets">遠</h3>
+				<h3 class="animate droplets1">の</h3>
+				<h3 class="animate droplets2">く</h3>
+				<h3 class="animate droplets3">景</h3>
+				<h3 class="animate droplets4">色</h3>
+				<h3 class="animate droplets5">を</h3>
+				<h3 class="animate droplets6"> </h3>
+				<h3 class="animate droplets7">こ</h3>
+				<h3 class="animate droplets8">の</h3>
+				<h3 class="animate droplets9">手</h3>
+				<h3 class="animate droplets10">で</h3>
+				<h3 class="animate droplets11">掴</h3>
+				<h3 class="animate droplets12">も</h3>
+				<h3 class="animate droplets13">う</h3>
+				<h3 class="animate droplets14">と</h3>
+				<h3 class="animate droplets15">し</h3>
+				<h3 class="animate droplets16">た</h3>
 
 			</div>
 
@@ -253,39 +256,39 @@
 
 			<div class="english_line1">
 
-			<h3>They are the weakest </h3>
+				<h3 class="animate cloud">They are the weakest </h3>
 
 			</div>
 
 			<div class="english_line2">
 
-			<h3>They don't even know </h3>
+				<h3 class="animate cloud1">They don't even know </h3>
 
 			</div>
 
 			<div class="english_line3">
 
-			<h3>Anything they say </h3>
+				<h3 class="animate cloud2">Anything they say </h3>
 
 			</div>
 
 			<div class="english_line4">
 
-			<h3>Will never break our hearts of gold </h3>
+				<h3 class="animate cloud3">Will never break our hearts of gold </h3>
 
 			</div>
 
-			</div>
+		</div>
 
-			<br>
+		<br>
 
 
 		<div class="credits">
 
 			<footer>
 
-				<h4>We are</h4>
-				<h4>Song by: ONE OK ROCK</h4>
+				<h4 class="animate passingCloud">We are</h4>
+				<h4 class="animate passingCloud1">Song by: ONE OK ROCK</h4>
 
 			</footer>
 
@@ -297,5 +300,9 @@
 
 
 </body>
+
+<script>
+	window.scrollTo(100000, 0)
+</script>
 
 </html>
