color on selected words acquired

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 			<div class="english_line3">
 
-				<h3 class="animate cloud2">Got demons in your head </h3>
+				<h3 class="animate cloud2">Got <span class = "animate blood">demons</span> in your head </h3>
 
 			</div>
 
@@ -274,7 +274,7 @@
 
 			<div class="english_line4">
 
-				<h3 class="animate cloud3">Will never break our hearts of gold </h3>
+				<h3 class="animate cloud3">Will never break our hearts of <span class= "animate sun">gold </span> </h3>
 
 			</div>
 
